Himanshu | added swagger contract
